# giano

./: .env.example  .env.production  INVITE_LINK_DUPLICATE_KEY_FIX.md  PIN_CHAT_FEATURE.md  QUIC_FINAL_CHECKPOINT_VERIFICATION.md  README.md  REFRESH_TOKEN_COMPLETE.md  SECURITY_AUDIT.md  TASK_16_COMPLETION_SUMMARY.md  TASK_17_COMPLETION_SUMMARY.md  TASK_18_COMPLETION_SUMMARY.md  TASK_22_COMPLETION_SUMMARY.md  VOICE_RECORDING_UPLOAD_FEATURE.md  docker-compose.ai.yml  index.html  messages-api.bug.edu.vn  nginx.conf  package-lock.json  package.json  test-settings.md
backend/: .env.example  .gitignore  Cargo.toml  Cross.toml  DEPLOY.md  QUIC_API_DOCUMENTATION.md  QUIC_CHECKPOINT_VERIFICATION.md  README.md  build-on-vps.sh  build-ubuntu.sh  cross-build-windows.ps1  deploy-ubuntu.sh  nginx.conf  test_quic_server.ps1  test_quic_server.sh  ystemctl list-unit-files --type=service  ystemctl list-units --type=service --state=running | grep -i chat-backend
backend/certs/: server.crt  server.key
backend/migrations/: 20240115000001_initial.sql  20240116000001_bot_engine.sql  20240117000001_message_sender_type.sql  20240118000001_bot_username.sql  20240118000002_botfather_messages.sql  20260104000001_refresh_tokens.sql  20260104000002_login_attempts.sql  20260106000001_invite_links.sql  20260111000001_pinned_chats.sql  20260129000001_remove_message_sender_fk.sql  20260131000001_expand_ip_address.sql
backend/src/: lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/error/: mod.rs
backend/src/models/: bot.rs  chat.rs  (+7 more)
backend/tests/: quic_integration_test.rs
(+297 files in other folders)
